--- a/splendid/blocks/head.html
+++ b/splendid/blocks/head.html
@@ -3,6 +3,7 @@
   <link href="styles/app.css" rel="stylesheet">
   <!-- Custom Prism Style -->
   <!-- <link href="styles/prism.css" rel="stylesheet"> -->
-  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href="img/favicon.32.png" sizes="32x32" rel="shortcut icon">
+  <link href="img/favicon.png" sizes="64x64" rel="shortcut icon">
   <link href="https://fonts.googleapis.com/css?family=Ruda" rel="stylesheet">
 </head>
